--- a/Code/ShipWorks.Installer/Views/UseShipWorks.xaml
+++ b/Code/ShipWorks.Installer/Views/UseShipWorks.xaml
@@ -22,7 +22,7 @@
             </TextBlock.TextDecorations>
         </TextBlock>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1">
-            <TextBlock Style="{StaticResource Header}" Text="Congrats! You've installed ShipWorks."  HorizontalAlignment="Center"/>
+            <TextBlock Style="{StaticResource Header}" Text="Congratulations! You've installed ShipWorks."  HorizontalAlignment="Center"/>
             <Button Style="{StaticResource LargePrimaryButton}" Command="{Binding NextCommand}" Content="Launch ShipWorks" Margin="0,20"/>
         </StackPanel>
     </Grid>
