--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -23,8 +23,7 @@
                     <TextDecoration/>
                 </TextBlock.TextDecorations>
             </TextBlock>
-            <TextBlock Style="{StaticResource Header}" Text="Select your desired warehouse for this installation:" />
-            <TextBlock Text="Selecting your warehouse links it with your database, for faster setup across multiple sites."  TextWrapping="Wrap" FontSize="10" Margin="0,10,0,0"/>
+            <TextBlock Style="{StaticResource Header}" Text="Select your desired warehouse for this location:" />
             <ComboBox Style="{StaticResource FormComboBox}" Margin="0,10,0,0" Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Path=WarehouseList}" DisplayMemberPath="Details.Name" SelectedItem="{Binding SelectedWarehouse, Mode=TwoWay}" x:Name="WarehouseSelection"/>
             <TextBlock Margin="0,20,0,0">
                 Need to enable remote connections? 
