--- a/Code/ShipWorks.UI/Dialogs/AboutShipWorks/AboutShipWorksDialog.xaml
+++ b/Code/ShipWorks.UI/Dialogs/AboutShipWorks/AboutShipWorksDialog.xaml
@@ -65,7 +65,7 @@
                        Grid.Column="1"
                        HorizontalAlignment="Right"
                        FontWeight="Bold"
-                       Text="Interapptive®"/>
+                       Text="Auctane®"/>
             
             <TextBlock Grid.Row="1"
                        Grid.Column="0"
