--- a/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/BestRateShipmentDetailsControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/BestRateShipmentDetailsControl.xaml
@@ -84,12 +84,13 @@
             AcceptApplyWeightKeyboardShortcut="True"
             ErrorMessage="{Binding WeightErrorMessage}"
             Style="{StaticResource OrderLookupWeightControl}"
-            Weight="{Binding ShipmentModel.ShipmentAdapter.ContentWeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" />
+            Weight="{Binding ShipmentModel.ShipmentAdapter.ContentWeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}"
+            ChangeDimensions="{Binding ChangeDimensions}" />
         <TextBlock
-            Grid.Row="3"
-            Grid.Column="0"
-            Style="{StaticResource FieldLabel}"
-            Text="Dimensions" />
+              Grid.Row="3"
+              Grid.Column="0"
+              Style="{StaticResource FieldLabel}"
+              Text="Dimensions" />
         <Grid Grid.Row="3" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
