--- a/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/FedExShipmentDetailsControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/FedExShipmentDetailsControl.xaml
@@ -191,7 +191,9 @@
             AcceptApplyWeightKeyboardShortcut="True"
             ErrorMessage="{Binding WeightErrorMessage}"
             Style="{StaticResource OrderLookupWeightControl}"
-            Weight="{Binding SelectedPackageWeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" />
+            Weight="{Binding SelectedPackageWeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+            ChangeDimensions="{Binding ChangeDimensions}"
+            />
 
         <TextBlock
             Grid.Row="7"
