--- a/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/PostalShipmentDetailsControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/PostalShipmentDetailsControl.xaml
@@ -161,7 +161,8 @@
                 AcceptApplyWeightKeyboardShortcut="True"
                 ErrorMessage="{Binding WeightErrorMessage}"
                 Style="{StaticResource OrderLookupWeightControl}"
-                Weight="{Binding ContentWeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" />
+                Weight="{Binding ContentWeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}"
+                ChangeDimensions="{Binding ChangeDimensions}" />
             <TextBlock
                 Grid.Row="7"
                 Grid.Column="0"
