--- a/Code/ShipWorks.UI/Controls/Settings/Cubiscan/CubiscanDeviceEditorDialog.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Cubiscan/CubiscanDeviceEditorDialog.xaml
@@ -1,18 +1,17 @@
 ﻿<ui:InteropWindow x:Class="ShipWorks.UI.Controls.Settings.Cubiscan.CubiscanDeviceEditorDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:controls="clr-namespace:ShipWorks.UI.Controls"
-        xmlns:local="clr-namespace:ShipWorks.UI.Controls.Settings.Cubiscan"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:valueConverters="clr-namespace:ShipWorks.UI.ValueConverters"
-        mc:Ignorable="d"
-        SizeToContent="Height"
-        Width="300"
-        Title="Edit Cubiscan Device" 
-        d:DataContext="{d:DesignInstance local:ICubiscanDeviceEditorViewModel}"
-        >
+                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                  xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
+                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                  xmlns:controls="clr-namespace:ShipWorks.UI.Controls"
+                  xmlns:local="clr-namespace:ShipWorks.UI.Controls.Settings.Cubiscan"
+                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                  xmlns:valueConverters="clr-namespace:ShipWorks.UI.ValueConverters"
+                  mc:Ignorable="d"
+                  SizeToContent="Height"
+                  Width="300"
+                  Title="Edit Cubiscan Device"
+                  d:DataContext="{d:DesignInstance local:ICubiscanDeviceEditorViewModel}">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -25,18 +24,18 @@
             <valueConverters:InverseBooleanConverter x:Key="InverseBoolean" />
         </ResourceDictionary>
     </Window.Resources>
-    <Grid Margin="10">
+    <Grid Margin="10" IsEnabled="{Binding ShowSpinner, Converter={StaticResource InverseBoolean}}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -46,23 +45,23 @@
                        Grid.Column="0"
                        Grid.ColumnSpan="2"
                        Text="Cubiscan Device Details"
-                       Style="{StaticResource Header}"/>
+                       Style="{StaticResource Header}" />
             <TextBlock Grid.Row="1"
                        Grid.Column="0"
                        Text="Computer"
-                       Style="{StaticResource FieldLabel}"/>
+                       Style="{StaticResource FieldLabel}" />
 
             <ComboBox Grid.Row="1"
                       Grid.Column="1"
                       DisplayMemberPath="Name"
                       ItemsSource="{Binding Computers, UpdateSourceTrigger=PropertyChanged}"
                       SelectedValue="{Binding SelectedComputer}"
-                      Style="{StaticResource FormComboBox}"/>
-            
+                      Style="{StaticResource FormComboBox}" />
+
             <TextBlock Grid.Row="2"
                        Grid.Column="0"
                        Text="Model"
-                       Style="{StaticResource FieldLabel}"/>
+                       Style="{StaticResource FieldLabel}" />
 
             <ComboBox Grid.Row="2"
                       Grid.Column="1"
@@ -70,39 +69,39 @@
                       SelectedValuePath="Key"
                       ItemsSource="{Binding Models, Mode=OneWay}"
                       SelectedValue="{Binding SelectedModel}"
-                      Style="{StaticResource FormComboBox}"/>
-            
+                      Style="{StaticResource FormComboBox}" />
+
             <TextBlock Grid.Row="3"
                        Grid.Column="0"
                        Text="IP Address"
-                       Style="{StaticResource FieldLabel}"/>
+                       Style="{StaticResource FieldLabel}" />
 
             <TextBox Grid.Row="3"
                      Grid.Column="1"
                      Text="{Binding IPAddress, UpdateSourceTrigger=PropertyChanged}"
-                     Style="{StaticResource FormTextBox}"/>
-            
+                     Style="{StaticResource FormTextBox}" />
+
             <TextBlock Grid.Row="4"
                        Grid.Column="0"
                        Text="Port Number"
-                       Style="{StaticResource FieldLabel}"/>
+                       Style="{StaticResource FieldLabel}" />
 
             <TextBox Grid.Row="4"
                      Grid.Column="1"
                      Text="{Binding PortNumber, UpdateSourceTrigger=PropertyChanged}"
-                     Style="{StaticResource FormTextBox}"/>
+                     Style="{StaticResource FormTextBox}" />
         </Grid>
         <Grid Grid.Row="1"
-            VerticalAlignment="Bottom"
-            HorizontalAlignment="Right"
-            Grid.IsSharedSizeScope="True">
+              VerticalAlignment="Bottom"
+              HorizontalAlignment="Right"
+              Grid.IsSharedSizeScope="True">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto" SharedSizeGroup="A"/>
-                <ColumnDefinition Width="auto" SharedSizeGroup="A"/>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" SharedSizeGroup="A" />
+                <ColumnDefinition Width="auto" SharedSizeGroup="A" />
             </Grid.ColumnDefinitions>
             <controls:WaitSpinner Visibility="{Binding ShowSpinner, Converter={StaticResource BooleanToVisibility}}"
-                                  BorderThickness="0" Margin="0 0 10 0 "/>
+                                  BorderThickness="0" Padding="0" Margin="0 0 10 0" />
 
             <Button
                 Grid.Column="1"
@@ -110,14 +109,13 @@
                 Margin="0 0 10 0"
                 Command="{Binding CancelCommand}"
                 Style="{StaticResource SmallSecondaryButton}"
-                Content="Cancel"/>
+                Content="Cancel" />
 
             <Button
                 Grid.Column="2"
                 Command="{Binding SaveCommand}"
                 Style="{StaticResource SmallPrimaryButton}"
-                Content="Save"
-                IsEnabled="{Binding ShowSpinner, Converter={StaticResource InverseBoolean}}"/>
+                Content="Save" />
         </Grid>
     </Grid>
 </ui:InteropWindow>
