WORKS-1490: Don't allow a computer to have multiple cubiscaners

--- a/Code/ShipWorks.UI/Controls/Settings/Cubiscan/CubiscanDeviceEditorDialog.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Cubiscan/CubiscanDeviceEditorDialog.xaml
@@ -73,7 +73,7 @@
 
             <TextBlock Grid.Row="3"
                        Grid.Column="0"
-                       Text="IP Address"
+                       Text="Device IP Address"
                        Style="{StaticResource FieldLabel}" />
 
             <TextBox Grid.Row="3"
