WORKS-1490: Change title of Cubiscan Editor as we can only add devices at this time

--- a/Code/ShipWorks.UI/Controls/Settings/Cubiscan/CubiscanDeviceEditorDialog.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Cubiscan/CubiscanDeviceEditorDialog.xaml
@@ -10,7 +10,7 @@
                   mc:Ignorable="d"
                   SizeToContent="Height"
                   Width="300"
-                  Title="Edit Cubiscan Device"
+                  Title="Add Cubiscan Device"
                   d:DataContext="{d:DesignInstance local:ICubiscanDeviceEditorViewModel}">
     <Window.Resources>
         <ResourceDictionary>
