--- a/Code/ShipWorks.Installer/Views/MainWindow.xaml
+++ b/Code/ShipWorks.Installer/Views/MainWindow.xaml
@@ -47,7 +47,7 @@
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Border MinWidth="225" Background="#FF252525" Grid.RowSpan="2">
+                <Border MinWidth="225" Background="White" Grid.RowSpan="2">
                     <Grid>
                         <StackPanel Margin="10">
                             <StackPanel.Resources>
