Updating the ODBC Import page to properly display the source column after navigating away from the page

--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/OdbcMappingControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/OdbcMappingControl.xaml
@@ -250,7 +250,8 @@
                                                                                                                        AncestorType=UserControl},
                                                                                         Path=DataContext.Columns,
                                                                                         UpdateSourceTrigger=PropertyChanged}"
-                                                                  SelectedItem="{Binding ExternalField.Column}"
+                                                                  SelectedIndexWhenNull="{x:Static ui:RelativeIndex.First}"
+                                                                  ui:SelectedValueProper="{Binding ExternalField.Column, Mode=TwoWay}"
                                                                   TextSearch.TextPath="Name" />
 
                                         </Grid>
