--- a/Code/ShipWorks.OrderLookup/Controls/Customs/UpsCustomsControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/Customs/UpsCustomsControl.xaml
@@ -35,6 +35,7 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="102" />
@@ -68,9 +69,20 @@
                 Grid.Row="1"
                 Grid.Column="0"
                 Style="{StaticResource FieldLabel}"
+                Text="Recipient Tax ID" />
+            <TextBox
+                Grid.Row="1"
+                Grid.Column="1"
+                Text="{Binding ShipmentModel.ShipmentAdapter.Shipment.Ups.CustomsRecipientTIN, UpdateSourceTrigger=PropertyChanged}"
+                Style="{StaticResource FormTextBox}" />
+            
+            <TextBlock
+                Grid.Row="2"
+                Grid.Column="0"
+                Style="{StaticResource FieldLabel}"
                 Text="Contents" />
             <CheckBox
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="1"
                 Margin="8 0 0 10"
                 IsChecked="{Binding ShipmentModel.ShipmentAdapter.Shipment.Ups.CustomsDocumentsOnly, UpdateSourceTrigger=PropertyChanged}"
@@ -78,12 +90,12 @@
                 Style="{StaticResource FormCheckBox}" />
 
             <TextBlock
-                Grid.Row="2"
+                Grid.Row="3"
                 Grid.Column="0"
                 Style="{StaticResource FieldLabel}"
                 Text="Description" />
             <TextBox
-                Grid.Row="2"
+                Grid.Row="3"
                 Grid.Column="1"
                 Margin="9 0 0 10"
                 Style="{StaticResource FormTextBox}"
