--- a/Code/ShipWorks.UI/Controls/Settings/Api/PlatformSettingsControl.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Api/PlatformSettingsControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ShipWorks.UI.Controls.Settings.Api.ApiSettingsControl"
+﻿<UserControl x:Class="ShipWorks.UI.Controls.Settings.Api.PlatformSettingsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
